footer on mobile fixed

--- a/themes/islands/main.css
+++ b/themes/islands/main.css
@@ -116,7 +116,6 @@ html{
 
 #footer{
   width: 100%;
-  position: absolute; 
   bottom: 0px; 
   left: 0px; 
 }
