--- a/themes/mountain/main.css
+++ b/themes/mountain/main.css
@@ -112,7 +112,6 @@ html{
 
 #footer{
   width: 100%;
-  position: absolute; 
   bottom: 0px; 
   left: 0px; 
 }
